--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -30,7 +30,7 @@ Hello! Welcome to my first ever attempt at documentation through code as well as
 <div class="center">
   <image style = "width: 75%"src = "iphone_detector.JPG" alt = "iphone detector"> </image>
 <p class = "margin"></p>
-<h4>**IPHONE DETECTOR**</h4>
+<h4>**IPhone Detector**</h4>
 
 
 
@@ -44,7 +44,7 @@ Similar to a speed radar on an undercover cop car on the highway, this iphone de
 
 <p class = "margin"></p>
 
-<h4>**CURSE PREVENTING BRACELET**</h4>
+<h4>**Curse Preventing Bracelet**</h4>
 <p class = "margin"></p>
 
 This was somewhat inspired by Lord of the Rings but along the way it became the complete opposite of what the ring causes. Rather than deteriorate the wearer's moral compass, this bracelet is meant to prevent the usage of profanity by the wearer. It'll be donned like a normal piece of jewellery, perhaps more on the apple-watch look of things, and using audio detection of prescribed curse words (it'll get familiar with most different types of accents and voices and pitches as long as the word itself is recognizable), it will begin to shrink in size and compress into the wrist for about 5 seconds to elicit sharp but brief pain and teach them a lesson to stop cursing. As someone who curses occasionally but really wants to use alternative words that aren't profane or insulting, this is exactly what I need. And what some certain people I know especially need... Within the small tablet on the bracelet, the audio detector will lie on top of a tiny motor attached to one belt running around the whole of the wrist. When curse words are detected, the detector (with code probably) will signal to the motor to begin spinning and this pull both ends of the belt closer to eachother, tightening the bracelet on the wrist. 
@@ -53,7 +53,7 @@ This was somewhat inspired by Lord of the Rings but along the way it became the 
 <div class="center">
   <image style = "width: 75%"src = "artists glove.JPG" alt = "artists glove"> </image>
 <p class = "margin"></p>
-<h4>**GUARANTEED CIRCLE ARTIST'S GLOVE**</h4>
+<h4>**Guaranteed Circle Artist's Glove**</h4>
 <p class = "margin"></p>
 
 As a traditional artist, I can do many things, like sketch from life, rerender a master study, oil paint on a 3'x4' canvas, etc. But one thing I and many artists find ourselves unable to do is drawing a simple, proportionate circle. Many times, our circles turn out to be ovals or have disconnected starting and ending points, or vary in pressure halfway through, resulting in an opaque semi-circle. Maybe after 10 tries we'll get the perfect one. Getting an accurate and proportionate circle is quite important when it comes to drawing anatomy and facial features, so having an artist glove that will do it for you is innovative and a time saver. How I envision it'll work is that the cloth glove (or perhaps a mold cast created exclusively for the wearer) will extend from mid-thumb, -index, and  -middle finger, all the way down to about 2 inches below the wrist. There will be a microcontroller programmer attached to the top of the wrist, coded with different circle sizes. The wearer can choose whichever option they want, and then the program will send a signal to a sort of motor or rotating mini device that will follow along the circumference of the circle. Before it draws the circle, once the option is clicked and ready to go, the wearer must pick up their drawing utensil, fix their fingers, hand, and wrist in the desired position, and once satisifed with the position, the wearer will press a button or controller that will lock the glove in this position so the wrist does not wobble or fingers slip. How to do that, I was thinking on each joint there will be little snaps in place that will be snapped shut through wires upon the button being pressed. On the finger parts will be placed rubber soles for extra adhesiveness the drawing utensil.  
