--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -24,7 +24,7 @@
 <p class="margin">   </p>
 
 
-<h4>**Assignment 1: MAKE A FINGER-JOINT BOX**</h4>
+<h4>Assignment 1: **Make a Finger-Joint Box**</h4>
 <p class = "margin"></p>
 
 
@@ -47,7 +47,7 @@ Update: It worked perfectly  but it was smaller than I realized it would be, so 
 <p class = "margin"></p>
 <p class = "margin"></p>
 
-<h4>**Assignment 2: FUSION 360 TUTORIAL**</h4>
+<h4>Assignment 2: **Fusion 360 Tutorial**</h4>
 
 So I did follow along with the first Fusion 360 tutorial linked in the course website bit I soon got bored so I moved onto actual 3D modeling. I followed a step by step video tutorial on a bottle cap by the Youtube channel Fusion Fundamentals who referenced this <a href="Bottle cap drawing.pdf" >drawing</a> (I unfortunetely need Youtube Premmium to download a video) and I think I did pretty good. Can confidently say I am a lot more familiar with certain actions and commands like extrude, patterns, shell, thread, appearance, chamfer, and fillet. I'm surprisingly having a lot of fun 3d modeling now. 
 
@@ -65,7 +65,7 @@ So I did follow along with the first Fusion 360 tutorial linked in the course we
 <p class="margin">   </p>
 
 
-<h4>**Assignment 3: FUSION MODELING**</h4>
+<h4>Assignment 3: **Fusion 360 Modeling**</h4>
 
 I got stuck on the "assembly" part of this assignment, so I decided to model both the cap and the body of my dewy tint product, that way it's two modeled objects that could be assembled together. That said, I've only so far done the cap, oops. I took measurements with a small caliper and got into all the nitty gritty details and did my best to reflect them in Fusion. I did a solid job except for the thread part- since I only had the thread options already given, I had to go with the closest looking one, which is ACME Screw Threads. I know the cap has 3 rows of thread whos edges converge to a sharp thread point, but alas I could not figure out how to accurately present that. But I believe I should still be able to theoretically print out and assemble both parts if I use the same thread settings on the body of the tint. 
 
@@ -91,7 +91,7 @@ Now here is the bottle of the dewy tint product. I had to figure out how to conv
 <image style = "width: 75%"src = "lipstickbottlephoto.jpeg" alt = "lipstick bottle photo"> </image>
 <p class = "margin"></p>
 
-<h4>**Miscellaneous: USELESS BOX**</h4>
+<h4>Miscellaneous: **Useless Box**</h4>
 
 Earlier in the week, Kassia walked us through making a useless box on Fusion during lab. While I haven't gotten the chance to print it out, here's a screenshot of my design in Fusion below. 
 
