--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -23,7 +23,8 @@
 <div class="textcontainer">
 <p class="margin">   </p>
 
-<h3>Assignment: **CREATE A KINETIC SCULPTURE**</h3>
+<h3>Assignment: **Create a Kinetic Sculpture**</h3>
+<p class="margin">   </p>
 
 This week we were charged with creating a kinetic sculpture. My original idea was inspired by story telling, and I wanted to create a scene where there is a sleeping dragon at night and when the sun comes up, the dragon awakens and blows fire then goes bakc to sleep as the night promptly returns. The backdrop would be a rotating circle where the diameter of the circle aligns with the topc platform of a box, with half of the circle in a painted night scene and the other half in a painted day scene. The motor would turn it for however many seconds needed to turn at a reasonable pace, then stop for 5-7 seconds. During these 5-7 seconds, the dragon would go down to sleep, or rise up to breathe fire. And to make the dragon move in a smooth wavy manner it would be dissevered and each body piece would have it's own cam fixed at a certain height different than the others on the rotating rod. As for the fire, it would rotate behind the dragon as it rises and falls an be positioned perfectly to come out from behind the mouth area. The top and side of the box would have slots perfectly fitted to the width and length of the fire and its rotating circumference 
 <p class = "margin"></p>
