uploaded rev scan

--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -23,9 +23,23 @@
 <div class="textcontainer">
 <p class="margin">   </p>
 
-<h3>Week 5: 3D Design & Printing</h3>
+<h3>Assignment 1: **3D Design and Print Something**</h3>
 
-<h4>Assignment: Model and 3D print something</h4>
+<h3>Assignment 2: **3D Scan Something**</h3>
+
+I wanted to scan my headphones because I had nothing else interesting on me. I started out by making two scans of both sides of the headphones using Revo Point Scanner, and it looked pretty good so far. However, when I tried to merge the two scans together, they were so similar that the program ended up placing both scans on the same side, so one side of the merged scan was empty. I realized this is because the headphones are so symmetrical and had no distinguishing features to single out both sides as different. So I scanned again, this time with the sticker markers. After placing a bunch of stickers in a disorganized fashion all over my headphones and creating two scans, I had to match up the markers to merge them accurately, and it took me 4 marker matching for the program to accurately merge the two scans together. 
+<p class="margin">   </p>
+<image style = "width: 75%"src = "revscanpic1.jpeg" alt = "Revo Marker Scan Photo 1"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "revscanpic2.jpeg" alt = "Revo Marker Scan Photo 2"> </image>
+<p class="margin">   </p>
+<image style = "width: 75%"src = "revscanpic3.jpeg" alt = "Revo Marker Scan Photo 3"> </image>
+<p class = "margin"></p>
+<div class="flexrow">
+  <a id="btn" href="./Fatmascannnnn.stl" download>Revo Scan File
+  </a>
+</div>
+<h3>Assignment 3: **More Info on Final Project**</h3>
 
 
 </div>
