--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -36,7 +36,7 @@ I wanted to scan my headphones because I had nothing else interesting on me. I s
 <image style = "width: 75%"src = "revscanpic3.jpeg" alt = "Revo Marker Scan Photo 3"> </image>
 <p class = "margin"></p>
 <div class="flexrow">
-  <a id="btn" href="./Fatmascannnnn.stl" download>Revo Scan File
+  <a id="btn" href="./Fatmascannnnn_Simplified.stl" download>Revo Scan File
   </a>
 </div>
 <h3>Assignment 3: **More Info on Final Project**</h3>
