input week 5 3d print files

--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -24,7 +24,12 @@
 <p class="margin">   </p>
 
 <h3>Assignment 1: **3D Design and Print Something**</h3>
-
+<div class="flexrow">
+  <a id="btn" href="./Week 5 3D Print.f3d" download>3D Printable Chainmail Fusion File
+<div class="flexrow">
+  <a id="btn" href="./Fatmaweek5stl.stl" download>3D Printable Chainmail STL File
+<div class="flexrow">
+  <a id="btn" href="./Fatmaweek5g-code.gcode" download>3D Printable Chainmail GCode
 <h3>Assignment 2: **3D Scan Something**</h3>
 <p class="margin">   </p>
 I wanted to scan my headphones because I had nothing else interesting on me. I started out by making two scans of both sides of the headphones using Revo Point Scanner, and it looked pretty good so far. However, when I tried to merge the two scans together, they were so similar that the program ended up placing both scans on the same side, so one side of the merged scan was empty. I realized this is because the headphones are so symmetrical and had no distinguishing features to single out both sides as different. So I scanned again, this time with the sticker markers. After placing a bunch of stickers in a disorganized fashion all over my headphones and creating two scans, I had to match up the markers to merge them accurately, and it took me 4 marker matching for the program to accurately merge the two scans together. 
@@ -38,7 +43,7 @@ I wanted to scan my headphones because I had nothing else interesting on me. I s
 <p class="margin">   </p>
 <h3>Assignment 3: **More Info on Final Project**</h3>
 
-
+<a download href='./path_to_file.stl'>Download my STL file <\a>
 </div>
 </xmp>
 </body>
