--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -22,28 +22,37 @@
 <xmp style="display:none;">
 <div class="textcontainer">
 <p class="margin">   </p>
-
+</a>
+</div>
 <h3>Assignment 1: **3D Design and Print Something**</h3>
-<div class="flexrow">
+<p class="margin">   </p>
+Our first assignment was to design and print a 3D model of something that couldnt be made with subtractive methods; in other words, could only be made (or facilitated) by a 3D printer when compared to lasercutting. I originally wanted to create something organic shaped, like the Golden Snitch or Darth Vader's helmet, in ZBrushCoreMini, however the creator disabled that software :( So then I tried learning how to create organiz shapes in Fusion, but the amout of time that would've required of me to actually learn the skill adequetly was too much for this week. So I turned to a good ol' YouTube tutorial on creating 3D Printable Chainmail. This was quite easy to follow and insightful to how flexible objects in 3D printing are designed in Fusion. 
+</a>
+</div>
+<p class="margin">   </p>
   <a id="btn" href="./Week 5 3D Print.f3d" download>3D Printable Chainmail Fusion File
-<div class="flexrow">
+ </a>
+</div>
+<p class="margin">   </p>
   <a id="btn" href="./Fatmaweek5stl.stl" download>3D Printable Chainmail STL File
-<div class="flexrow">
+ </a>
+</div>
+<p class="margin">   </p>
   <a id="btn" href="./Fatmaweek5g-code.gcode" download>3D Printable Chainmail GCode
+ </a>
+</div>
+<p class="margin">   </p>
 <h3>Assignment 2: **3D Scan Something**</h3>
 <p class="margin">   </p>
-I wanted to scan my headphones because I had nothing else interesting on me. I started out by making two scans of both sides of the headphones using Revo Point Scanner, and it looked pretty good so far. However, when I tried to merge the two scans together, they were so similar that the program ended up placing both scans on the same side, so one side of the merged scan was empty. I realized this is because the headphones are so symmetrical and had no distinguishing features to single out both sides as different. So I scanned again, this time with the sticker markers. After placing a bunch of stickers in a disorganized fashion all over my headphones and creating two scans, I had to match up the markers to merge them accurately, and it took me 4 marker matching for the program to accurately merge the two scans together. 
+I wanted to scan my headphones because I had nothing else interesting on me. I started out by making two scans of both sides of the headphones using Revo Point Scanner, and it looked pretty good so far. However, when I tried to merge the two scans together, they were so similar that the program ended up placing both scans on the same side, so one side of the merged scan was empty. I realized this is because the headphones are so symmetrical and had no distinguishing features to single out both sides as different. So I scanned again, this time with the sticker markers. After placing a bunch of stickers in a disorganized fashion all over my headphones and creating two scans, I had to match up the markers to merge them accurately, and it took me 4 marker matching for the program to accurately merge the two scans together. However, as the scan file shows, the areas where the stickers were placed are distinguished by rough patches that do not smoothly blend into the rest of the headphone surface, even after using the fill holes and smooth functions. This showed be both the pros and cons of scanning symmetrical objects with stickers: You can merge two seperate scans to create a whole 3D scan at the price of bumpy areas in place of the stickers. 
 <p class="margin">   </p>
 <image style = "width: 75%"src = "revscanpic1.jpeg" alt = "Revo Marker Scan Photo 1"> </image>
 <p class = "margin"></p>
-<div class="flexrow">
   <a id="btn" href="./Fatmascannnnn_Simplified.stl" download>Revo Scan File
   </a>
 </div>
 <p class="margin">   </p>
 <h3>Assignment 3: **More Info on Final Project**</h3>
-
-<a download href='./path_to_file.stl'>Download my STL file <\a>
 </div>
 </xmp>
 </body>
