put photo of week 5 3d print

--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -28,6 +28,9 @@
 <p class="margin">   </p>
 Our first assignment was to design and print a 3D model of something that couldnt be made with subtractive methods; in other words, could only be made (or facilitated) by a 3D printer when compared to lasercutting. I originally wanted to create something organic shaped, like the Golden Snitch or Darth Vader's helmet, in ZBrushCoreMini, however the creator disabled that software :( So then I tried learning how to create organiz shapes in Fusion, but the amout of time that would've required of me to actually learn the skill adequetly was too much for this week. So I turned to a good ol' YouTube tutorial on creating 3D Printable Chainmail. This was quite easy to follow and insightful to how flexible objects in 3D printing are designed in Fusion. 
 </a>
+<p class="margin">   </p>
+<image style = "width: 75%"src = "week53dprint.jpeg" alt = "week 5 3d print"> </image>
+<p class = "margin"></p>
 </div>
 <p class="margin">   </p>
   <a id="btn" href="./Week 5 3D Print.f3d" download>3D Printable Chainmail Fusion File
