input week 5 cnc file

--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -23,12 +23,18 @@
 <div class="textcontainer">
 <p class="margin">   </p>
 
-<h3>Week 6: Electronic Inputs</h3>
+<h4>Assignment 1: **Capactive Sensor**<h4>
 
-<h4>Assignment 1: Capactive Sensor<h4>
+<h4>Assignment 2: **Use + Calibrate Another Sensor**</h4>
 
-<h4>Assignment 2: [Use + Calibrate Another Sensor]</h4>
-
+<h4>Assignment 3: **CNC File**</h4>
+<p class="margin">   </p>
+My CNC milling stl file is simple- its just a rectangular block with geometric planes on top. 
+</div>
+<p class="margin">   </p>
+  <a id="btn" href="./week5cncstlfile.stl" download>CNC STL File
+ </a>
+</div>
 </div>
 </xmp>
 </body>
