--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -24,7 +24,9 @@
 <p class="margin">   </p>
 
 <h4>Assignment 1: **Capactive Sensor**<h4>
-
+<p class = "margin"></p>
+<video style = "width: 75%"src = "capacitor1vid.mp4" alt = "Capacitor 1 Video" controls> </video>
+<p class = "margin"></p>
 <h4>Assignment 2: **Use + Calibrate Another Sensor**</h4>
 
 <h4>Assignment 3: **CNC File**</h4>
