--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -53,6 +53,19 @@ I wanted to scan my headphones because I had nothing else interesting on me. I s
 </div>
 <p class="margin">   </p>
 <h3>Assignment 3: **More Info on Final Project**</h3>
+<p class="margin">   </p>
+Materials Bill:
+<ul>
+        <li>List Item 1</li>
+        <li>List Item 2</li>
+        <li>List Item 3</li>
+    </ul>
+
+    <ol>
+        <li>First item</li>
+        <li>Second item</li>
+        <li>Third item</li>
+    </ol>
 </div>
 </xmp>
 </body>
