materials bill, timeline

--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -56,15 +56,20 @@ I wanted to scan my headphones because I had nothing else interesting on me. I s
 <p class="margin">   </p>
 Materials Bill:
 <ul>
-        <li>List Item 1</li>
-        <li>List Item 2</li>
-        <li>List Item 3</li>
+        <li>Nylon stretch strap</li>
+        <li>Output device:Servo Motor</li>
+        <li>Motor axle extender</li>
+        <li>Input device: microphone(audio sensor)</li>
+        <li>Input and Output housing-- 3d print/CNC Milling</li>
+        <li>Small microcontroller</li>
     </ul>
 
-    <ol>
-        <li>First item</li>
-        <li>Second item</li>
-        <li>Third item</li>
+Timeline:
+<ol>
+        <li>Week 6: Create Input microphone sensor</li>
+        <li>Week 7: Create Output motor sensor</li>
+        <li>Week 8: Create sensor housing with CNC milling or 3D printing</li>
+        <li>Week 11-13: Put everything together and run test trials</li>
     </ol>
 </div>
 </xmp>
