--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -63,7 +63,7 @@ Materials Bill:
         <li>Input and Output housing-- 3d print/CNC Milling</li>
         <li>Small microcontroller</li>
     </ul>
-
+<p class="margin">   </p>
 Timeline:
 <ol>
         <li>Week 6: Create Input microphone sensor</li>
