week 5 3d model final proejct

--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -41,6 +41,7 @@ Our first assignment was to design and print a 3D model of something that couldn
   <a id="btn" href="./Fatmaweek5g-code.gcode" download>3D Printable Chainmail GCode
  </a>
 </div>
+<div class="textcontainer">
 <p class="margin">   </p>
 <h3>Assignment 2: **3D Scan Something**</h3>
 <p class="margin">   </p>
@@ -51,6 +52,7 @@ I wanted to scan my headphones because I had nothing else interesting on me. I s
   <a id="btn" href="./Fatmascannnnn_Simplified.stl" download>Revo Scan File
   </a>
 </div>
+<div class="textcontainer">
 <p class="margin">   </p>
 <h3>Assignment 3: **More Info on Final Project**</h3>
 <p class="margin">   </p>
@@ -71,7 +73,16 @@ Timeline:
         <li>Week 8: Create sensor housing with CNC milling or 3D printing</li>
         <li>Week 11-13: Put everything together and run test trials</li>
     </ol>
+<p class="margin">   </p>
+Final Project 3D Model
 </div>
+<p class="margin">   </p>
+<image style = "width: 75%"src = "boxhinge1.png" alt = "box hinge 3d model"> </image>
+<image style = "width: 75%"src = "boxhinge2.png" alt = "box hinge 3d model"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "finalprojectmodel1.png" alt = "final project 3d model"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "finalprojectmodel2.png" alt = "final project 3d model without esp32"> </image>
 </xmp>
 </body>
 
