--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -42,12 +42,12 @@ For my second capacitor, I worked with the I2S microphone since that's probably 
 <p class="margin">   </p>
 Below is a screen recording of the serial plotter as I held the I2S to my headphones and blasted Summer of 69 by Bryan Adams. 
 <p class="margin">   </p>
-<image style = "width: 75%"src = "i2s summerof69.mp4" alt = "I2S listening to Summer of 69"> </image>
+<video style = "width: 75%"src = "i2s summerof69.mp4" alt = "I2S listening to Summer of 69" controls> </video>
 <p class = "margin"></p>
 The following is the code that I used:
 <pre>
   <code class="arduino" style = "color: black; background-color: transparent;">
-    #include <ESP_I2S.h>
+    #include < ESP_I2S.h >
 
     const int buff_size = 128;
     int available_bytes, read_bytes;
