--- a/07_outputs/index.html
+++ b/07_outputs/index.html
@@ -29,8 +29,8 @@
 Here is my code in arduino below:
 <pre>
   <code class="arduino" style = "color: black; background-color: transparent;">
-#include <ESP_I2S.h>
-#include <ESP32Servo.h>
+\#include <ESP_I2S.h>
+\#include <ESP32Servo.h>
 
 
     const int buff_size = 128;
